--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     "start": "node src/app.js",
     "watch": "nodemon src/app.js"
   },
-  "author": "Srinidhi Rao",
+  "author": "Prajith",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "desync": "^1.1.2",
     "express": "^4.17.1",
+    "foreach": "^2.0.5",
+    "jira": "^0.9.2",
+    "jira-client": "^6.9.0",
+    "jira-connector": "^2.16.1",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "uuid": "^3.3.2",
+    "webex": "^1.77.4"
   },
   "devDependencies": {}
 }
