--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "concur-bot-express",
+  "name": "charity_bot",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
@@ -7,7 +7,7 @@
     "start": "node src/app.js",
     "watch": "nodemon src/app.js"
   },
-  "author": "Prajith",
+  "author": "Ria",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
@@ -16,9 +16,6 @@
     "desync": "^1.1.2",
     "express": "^4.17.1",
     "foreach": "^2.0.5",
-    "jira": "^0.9.2",
-    "jira-client": "^6.9.0",
-    "jira-connector": "^2.16.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
